Fixed another spacing issue

--- a/src/style/new-releases.scss
+++ b/src/style/new-releases.scss
@@ -16,7 +16,7 @@
         justify-content: center;
         align-items: center;
         padding: 15px;
-        padding-right: 65px;
+        padding-right: 55px;
         
         
         img {
@@ -30,14 +30,14 @@
 
     .new-release-heading {
         color: $offwhite;
-        padding-right: 50px;
+        padding-right: 40px;
     }
 
     .new-release-btn-link-wrapper{
         display: flex;
         flex-direction: column;
         padding: 40px;
-        padding-right: 95px;
+        padding-right: 85px;
     
 
     .smaller-btn-link-wrapper {
